--- a/d02-bfv.tex
+++ b/d02-bfv.tex
@@ -1125,7 +1125,7 @@ $ $
 $= \bm{(} \text{ } M((\omega^{J(h)})^{J(0)}), \text{ } M((\omega^{J(h)})^{J(1)}), \text{ } M((\omega^{J(h)})^{J(2)}), \cdots, M((\omega^{J(h)})^{J(\frac{n}{2}-1)}) \text{ } \bm{)}$
 
 
-\textcolor{red}{\# This is equivalent to evaluating the polynomial $M(X^{J(h)})$ at the following $n$ distinct $(\mu=2n)$-th roots of unity: $\omega^{J(0)}, \omega^{J(1)},  \omega^{J(2)}, \cdots, \omega^{J(\frac{n}{2} - 1)}$}
+\textcolor{red}{\# This is equivalent to evaluating the polynomial $M(X^{J(h)})$ at the following $\dfrac{n}{2}$ distinct $(\mu=2n)$-th roots of unity: $\omega^{J(0)}, \omega^{J(1)},  \omega^{J(2)}, \cdots, \omega^{J(\frac{n}{2} - 1)}$}
 
 $ $
 
@@ -1164,7 +1164,7 @@ $ $
 $= \bm{(} \text{ } M((\omega^{J(h)})^{J_*(0)}), \text{ } M((\omega^{J(h)})^{J_*(1)}), \text{ } M((\omega^{J(h)})^{J_*(2)}), \cdots, M((\omega^{J(h)})^{J_*(\frac{n}{2}-1)}) \text{ } \bm{)}$
 
 
-\textcolor{red}{\# This is equivalent to evaluating the polynomial $M(X^{J(h)})$ at the following $n$ distinct $(\mu=2n)$-th roots of unity: $\omega^{J_*(0)}, \omega^{J_*(1)},  \omega^{J_*(2)}, \cdots, \omega^{J_*(\frac{n}{2} - 1)}$}
+\textcolor{red}{\# This is equivalent to evaluating the polynomial $M(X^{J(h)})$ at the following $\dfrac{n}{2}$ distinct $(\mu=2n)$-th roots of unity: $\omega^{J_*(0)}, \omega^{J_*(1)},  \omega^{J_*(2)}, \cdots, \omega^{J_*(\frac{n}{2} - 1)}$}
 
 $ $
 
