--- a/d02-bfv.tex
+++ b/d02-bfv.tex
@@ -1770,13 +1770,13 @@ $A = \begin{bmatrix}
 \vec{a}_{\langle 0, * \rangle} \\ 
 \vec{a}_{\langle 1, * \rangle} \\ 
 \vec{a}_{\langle 2, * \rangle} \\ 
-\vdots
+\vdots\\
 \vec{a}_{\langle m-1, * \rangle} \\ 
 \end{bmatrix}, \text{ } \vec{x} = (x_0, x_1, \cdots, x_{n-1})$
 
 $ $
 
-The result of $A \cdot \vec{x}$ is an $n$-dimensional vector computed as:
+The result of $A \cdot \vec{x}$ is an $m$-dimensional vector computed as:
 
 $A \cdot \vec{x} = \Big(\vec{a}_{\langle 0, * \rangle} \cdot \vec{x}, \text{ } \vec{a}_{\langle 1, * \rangle} \cdot \vec{x}, \text{ }\cdots,\text{ } \vec{a}_{\langle m-1, * \rangle} \cdot \vec{x} \Big) = \left(\sum\limits_{i=0}^{n-1} a_{0, i} \cdot  x_i, \text{ } \sum\limits_{i=0}^{n-1}  a_{1, i} \cdot x_i, \gap{$\cdots$}, \text{ } \sum\limits_{i=0}^{n-1} a_{m-1, i} \cdot x_i \right)$
 
